chamber/css/medium.css
@media only screen and (min-width: 35rem) {
  main {
    grid-template-rows: repeat(auto-fit, minmax(320px, 1fr));
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    /* text-align: start; */
    padding: 5px;
    grid-gap: 5px;
  }

  #banner {
    font-size: 18px;
    top: 135px;
    padding: 10px;
  }

  .date {
    font-size: 18px;
  }

  .hero {
    grid-row: 1/2;
    grid-column: 1/7;
  }

  .news {
    grid-row: 2/3;
    grid-column: 1/7;
  }

  .spotlights {
    grid-row: 3/4;
    grid-column: 1/7;
    display: flex;
    flex-direction: column;
  }

  .spotlights > div {
    border: 3px solid #283618;
    margin: 10px;
  }

  .join {
    display: block;
    grid-row: 4/5;
    grid-column: 1/7;
  }

  .event {
    grid-row: 5/6;
    grid-column: 1/5;
  }

  .weather {
    grid-row: 5/6;
    grid-column: 5/7;
  }

  .golden-gallery:hover {
    opacity: 0.5;
  }

  .gallery {
    padding-top: 10px;
    padding-bottom: 10px;
  }

  footer {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    grid-template-rows: 2fr 1fr;
    grid-gap: 5px;
  }

  footer img {
    grid-column: 1/2;
    grid-row: 1/2;
    margin-top: 10px;
    justify-self: center;
    align-self: center;
    margin-bottom: 5px;
  }

  .contact {
    grid-column: 2/4;
    grid-row: 1/2;
    align-self: center;
    justify-self: left;
    text-align: start;
  }

  .location {
    grid-column: 4/6;
    grid-row: 1/2;
    align-self: flex-end;
    justify-self: center;
  }

  .foot {
    grid-column: 1/6;
    grid-row: 2/3;
    border-top: 1px solid white;
    padding-top: 5px;
  }

  /* FORM */

  .join-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
  }

  form {
    grid-column: 2/3;
    font-size: 16px;
  }

  form fieldset {
    margin: 15px;
    text-align: start;
  }

  form label.top input {
    font-size: 1rem;
  }

  textarea {
    width: 100%;
  }

  .join-grid h1 {
    grid-column: 1/3;
    color: white;
    line-height: 1.2em;
    font-size: 45px;
  }

  .membership-info {
    grid-column: 1/2;
    text-align: start;
  }

  .membership-info h2 {
    font-size: 35px;
    margin-left: 2%;
  }

  .membership-info h3 {
    font-size: 25px;
  }

  .membership-info p {
    line-height: 1.7em;
    font-size: 16px;
  }

  form {
    background-color: #f7f0e3;
  }
  .join-grid {
    display: block;
  }

  .thanks-main {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .thankyou-join {
    padding: 20px;
    max-width: 50%;
    border: black 2px solid;
    margin-bottom: 350px;
    margin-top: 100px;
  }

  .thankyou-contact {
    padding: 20px;
    max-width: 50%;
    border: black 2px solid;
    margin-bottom: 350px;
    margin-top: 100px;
  }

  /* Directory cards */

  /* default list view */

  .cards {
    display: grid;
    grid-template-rows: repeat(auto-fit, minmax(320px, 1fr));
    text-align: left;
  }

  .dicard {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }

  .dicard img {
    display: none;
  }

  .dicard h2 {
    margin-left: 20px;
    align-self: center;
    font-size: 20px;
  }
  .dicard:nth-of-type(even) {
    background-color: #f2e1d3;
  }

  .dicard p.diwebpage {
    margin-right: 20px;
    align-self: center;
  }

  .dicard p.diaddress {
    margin-right: 75px;
    align-self: center;
  }

  .dicard p.diphone {
    align-self: center;
  }

  .dicard p {
    margin: 3% 0 3% 0;
  }

  /* list view */

  .cards.listview {
    display: grid;
    grid-template-rows: repeat(auto-fit, minmax(320px, 1fr));
  }

  .listview .dicard {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }

  .listview .dicard h2 {
    margin-left: 20px;
    align-self: center;
  }

  .listview .dicard p.diwebpage {
    margin-right: 20px;
    align-self: center;
  }

  .listview .dicard p.diaddress {
    margin-right: 75px;
    align-self: center;
  }

  .listview .dicard p.diphone {
    align-self: center;
  }

  .listview .dicard p {
    margin: 3% 0 3% 0;
  }

  /* grid view */

  .cards.gridview {
    text-align: center;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
    grid-gap: 5px;
    border: 10px solid #606c38;
    background-color: #606c38;
  }

  .gridview .dicard {
    border: 2px #283618 solid;
    border-collapse: collapse;
    background-color: #f7f0e3;
    padding: 10px;
    box-shadow: 0 0 30px #283618;
    text-align: center;
    display: block;
  }

  .gridview img.dilogo {
    display: inline;
    width: 80px;
  }

  .gridview p.diaddress {
    display: block;
    margin: 0;
    margin-right: 0px;
  }

  .gridview.dicard.diphone {
    display: block;
    margin: 0;
  }

  .gridview.dicard.diwebpage {
    display: block;
    margin: 0;
  }

  .contact-flex {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
  }

  .contact-info {
    display: flex;
    flex-direction: column;
    justify-content: top;
  }

  .map {
    width: 100%;
    height: "300";
    border: 0;
  }
}

